# gizmo-sallary-calculator

./: pyproject.toml
app/: bot.py  config.py
app/commands/: calculate.py
app/utils/: calculate.py  excel.py  sort.py
